<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" android:id="@+id/screen"  
    android:layout_width="fill_parent" android:layout_height="fill_parent"  
    android:orientation="vertical">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/help_title"
        android:id="@+id/help_title"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="36dp"
        android:textSize="24sp"/>

    <TextView 
        android:id="@+id/hp_help"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dishelp"
        android:paddingLeft="5dip"
        android:layout_below="@id/help_title"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:textSize="20sp"
        
        
        android:layout_gravity="center_horizontal"

        android:layout_alignParentLeft="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/help_copyright"
        android:id="@+id/help_copyright"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="26dp" />


</RelativeLayout>